# part_viewer

./: Cargo.toml  README.md  build.rs
res/: cube.stl  rounded_box.stl
src/: bounding_box.rs  instance.rs  main.rs
src/graphics/: camera.rs  light.rs  mesh.rs  mod.rs  screenshot.rs  texture.rs  transformation.rs
src/graphics/render_pipeline/: mod.rs  shader.frag  shader.vert
